--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -31,7 +31,7 @@ const truncatedDescription = truncateUTF8String(post.data.description, 150);
 ---
 
 <div
-  class="relative overflow-hidden rounded-xl border bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 md:flex md:flex-row dark:border-neutral-600 dark:bg-neutral-900"
+  class="relative overflow-hidden rounded-xl border bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:border-neutral-600 dark:bg-neutral-900 md:flex md:flex-row"
 >
   <a href={`/posts/${post.slug}/`} class="block md:flex md:flex-1">
     <div class="md:w-2/3">
@@ -40,14 +40,18 @@ const truncatedDescription = truncateUTF8String(post.data.description, 150);
     <div
       class="absolute bottom-0 end-0 start-0 bg-gradient-to-t from-black p-4 md:relative md:flex md:w-1/3 md:flex-col md:justify-start md:bg-transparent md:p-5"
     >
-    <div class="mt-8 flex items-center gap-4 text-xs text-white md:text-neutral-900 dark:text-white">
+      <div
+        class="mt-8 flex items-center gap-4 text-xs text-white dark:text-white md:text-neutral-900"
+      >
         <span>{post.data.tags.join(" ")}</span>
         <FormattedDate date={post.data.pubDate} />
       </div>
-      <h3 class="mt-3 text-lg font-bold text-white md:text-neutral-900 dark:text-white">
+      <h3
+        class="mt-3 text-lg font-bold text-white dark:text-white md:text-neutral-900"
+      >
         {post.data.title}
       </h3>
-      <p class="mt-3 text-white md:text-neutral-900 dark:text-white">
+      <p class="mt-3 text-white dark:text-white md:text-neutral-900">
         {truncatedDescription}
       </p>
     </div>
