--- a/src/components/OptimizedPicture.astro
+++ b/src/components/OptimizedPicture.astro
@@ -21,7 +21,7 @@ const {
            1960px`,
   formats = ["avif"],
   fallbackFormat = "avif",
-  class: className = "mx-auto w-full max-w-full rounded-lg"
+  class: className = "mx-auto w-full max-w-full rounded-lg",
 } = Astro.props;
 ---
 
