--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,12 +8,25 @@ const description = `Error 404`;
 
 <BaseLayout title={title} description={description}>
   <main id="content">
-    <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
-      <h1 class="block text-7xl font-bold text-gray-800 sm:text-9xl dark:text-white">404</h1>
-      <p class="mt-3 text-gray-600 dark:text-neutral-400">Oops, something went wrong.</p>
-      <p class="text-gray-600 dark:text-neutral-400">Sorry, we couldn't find your page.</p>
-      <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
-        <a class="w-full sm:w-auto py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-neutral-400 text-white hover:bg-neutral-600 disabled:opacity-50 disabled:pointer-events-none" href="/">
+    <div class="px-4 py-10 text-center sm:px-6 lg:px-8">
+      <h1
+        class="block text-7xl font-bold text-gray-800 dark:text-white sm:text-9xl"
+      >
+        404
+      </h1>
+      <p class="mt-3 text-gray-600 dark:text-neutral-400">
+        Oops, something went wrong.
+      </p>
+      <p class="text-gray-600 dark:text-neutral-400">
+        Sorry, we couldn't find your page.
+      </p>
+      <div
+        class="mt-5 flex flex-col items-center justify-center gap-2 sm:flex-row sm:gap-3"
+      >
+        <a
+          class="inline-flex w-full items-center justify-center gap-x-2 rounded-lg border border-transparent bg-neutral-400 px-4 py-3 text-sm font-semibold text-white hover:bg-neutral-600 disabled:pointer-events-none disabled:opacity-50 sm:w-auto"
+          href="/"
+        >
           <Icon name="tabler:chevron-left" class="icon-base" />
           Back to homepage
         </a>
