--- a/src/components/CommonCard.astro
+++ b/src/components/CommonCard.astro
@@ -2,18 +2,28 @@
 import type { CollectionEntry } from "astro:content";
 import OptimizedCover from "@components/OptimizedPicture.astro";
 import FormattedDate from "@components/FormattedDate.astro";
+import { getRelativeLocaleUrl } from "astro:i18n";
+import { getCurrentLocale } from "@utils/localeUtils";
 
 interface Props {
   post: CollectionEntry<"posts">;
 }
 
 const { post } = Astro.props;
+
+const currentLocale = getCurrentLocale(post.id);
 ---
 
 <div
-  class="relative overflow-hidden rounded-xl bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:bg-neutral-900"
+  class="relative overflow-hidden rounded-xl bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:bg-neutral-900" transition:animate="slide"
 >
-  <a href={`/posts/${post.slug}/`} class="block">
+  <a
+    href={getRelativeLocaleUrl(
+      currentLocale,
+      `posts/${post.slug.replace(/^[a-z]{2}\//, "")}`,
+    )}
+    class="block"
+  >
     <OptimizedCover src={post.data.cover} alt={post.data.coverAlt} />
     <div class="absolute bottom-0 end-0 start-0 bg-gradient-to-t p-5 md:p-6">
       <div class="mt-16 flex items-center gap-4 text-xs text-white">
