--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,31 +1,50 @@
 ---
-import Link from "@components/Links.astro";
+import HeaderLinks from "@components/HeaderLinks.astro";
 import { Icon } from "astro-icon/components";
-import { SITE_TITLE, HeaderLinks } from "@consts";
+import { getRelativeLocaleUrl } from "astro:i18n";
+import { getCurrentLocale, getBrandName } from "@utils/localeUtils";
+import LanguageSwitcher from "@components/LanguageSwitcher.astro";
+
+const currentLocale = getCurrentLocale(Astro.url.pathname);
+const brandName = getBrandName(currentLocale);
+
+let navData;
+switch (currentLocale) {
+  case "zh":
+    navData = await import("@utils/zh/headernav");
+    break;
+  default:
+    navData = await import("@utils/en/headernav");
+    break;
+}
+
+const safeGetRelativeLocaleUrl = (path: string) =>
+  getRelativeLocaleUrl(currentLocale, path);
 ---
 
-<header class="z-50 flex w-full flex-wrap py-7 md:flex-nowrap md:justify-start">
+<header class="z-50 flex w-full flex-wrap py-7 lg:flex-nowrap lg:justify-start">
   <nav
-    class="relative mx-auto flex w-full max-w-7xl basis-full flex-wrap items-center px-4 md:grid md:grid-cols-12"
+    class="relative mx-auto flex w-full max-w-7xl basis-full flex-wrap items-center px-4 lg:grid lg:grid-cols-12 lg:px-8"
     aria-label="Global"
   >
-    <div class="md:col-span-3">
+    <div class="lg:col-span-3">
       <a
-        class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
-        href="/"
-        aria-label="Astroverse"
+        class="inline-block flex-none rounded-xl text-xl font-semibold focus:opacity-80 focus:outline-none dark:text-white"
+        href={safeGetRelativeLocaleUrl("/")}
+        aria-label="Witness.Rocks"
       >
-        {SITE_TITLE}
+        {brandName}
       </a>
     </div>
 
     <div
-      class="ms-auto flex items-center gap-x-2 py-1 md:order-3 md:col-span-3 md:ps-6"
+      class="ms-auto flex items-center gap-x-2 py-1 lg:order-3 lg:col-span-3 lg:ps-6"
     >
       <button
         type="button"
-        class="inline-flex items-center gap-x-2 rounded-xl border border-transparent px-3 py-2 text-sm font-medium text-black transition hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:text-white dark:hover:bg-neutral-700"
-        onclick="window.location.href='/search/'"
+        onclick={`window.location.href='${safeGetRelativeLocaleUrl("/search/")}'`}
+        class="inline-flex items-center gap-x-2 rounded-full px-3 py-2 text-sm font-medium text-black hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-700 dark:text-white dark:hover:bg-white/10 dark:hover:text-white"
+        aria-label="Search"
       >
         <Icon name="tabler:search" class="icon-base" />
       </button>
@@ -34,6 +53,7 @@ import { SITE_TITLE, HeaderLinks } from "@consts";
         type="button"
         class="hs-dark-mode inline-flex items-center gap-x-2 rounded-full px-3 py-2 text-sm text-black hover:bg-white/20 hs-dark-mode-active:hidden"
         data-hs-theme-click-value="dark"
+        aria-label="Light"
       >
         <Icon name="tabler:sun-filled" class="icon-base" />
       </button>
@@ -41,14 +61,17 @@ import { SITE_TITLE, HeaderLinks } from "@consts";
         type="button"
         class="hs-dark-mode hidden items-center gap-x-2 rounded-full px-3 py-2 text-sm text-white hover:bg-white/20 hs-dark-mode-active:inline-flex"
         data-hs-theme-click-value="light"
+        aria-label="Dark"
       >
         <Icon name="tabler:moon-filled" class="icon-base" />
       </button>
 
-      <div class="md:hidden">
+      <LanguageSwitcher />
+
+      <div class="lg:hidden">
         <button
           type="button"
-          class="hs-collapse-toggle flex size-[38px] items-center justify-center rounded-xl text-sm font-semibold text-black hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:text-white dark:hover:bg-neutral-700"
+          class="hs-collapse-toggle flex size-[38px] items-center justify-center text-sm font-semibold text-black hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700"
           data-hs-collapse="#navbar-collapse-with-animation"
           aria-controls="navbar-collapse-with-animation"
           aria-label="Toggle navigation"
@@ -67,19 +90,16 @@ import { SITE_TITLE, HeaderLinks } from "@consts";
 
     <div
       id="navbar-collapse-with-animation"
-      class="hs-collapse hidden grow basis-full overflow-hidden transition-all duration-300 md:order-2 md:col-span-6 md:block md:w-auto md:basis-auto"
+      class="hs-collapse hidden grow basis-full overflow-hidden transition-all duration-300 lg:order-2 lg:col-span-6 lg:block lg:w-auto lg:basis-auto"
     >
       <div
-        class="mt-5 flex flex-col gap-x-0 gap-y-4 md:mt-0 md:flex-row md:items-center md:justify-center md:gap-x-7 md:gap-y-0"
+        class="mt-5 flex flex-col gap-x-0 gap-y-4 lg:mt-0 lg:flex-row lg:items-center lg:justify-center lg:gap-x-7 lg:gap-y-0"
       >
         {
-          HeaderLinks.map((link) => (
-            <Link
-              href={link.href}
-              class="px-4 py-3 font-medium text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
-            >
-              {link.title}
-            </Link>
+          navData["navData"].map((d, i) => (
+            <HeaderLinks href={safeGetRelativeLocaleUrl(d.href)}>
+              {d.text}
+            </HeaderLinks>
           ))
         }
       </div>
