--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,25 +2,36 @@
 import BaseHead from "@components/BaseHead.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
+import { getCurrentLocale } from "@utils/localeUtils";
+import { ViewTransitions } from 'astro:transitions';
 
-const { title, description } = Astro.props;
+const { title, description, image } = Astro.props;
+const lang = getCurrentLocale(Astro.url.pathname);
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
   <head>
-    <BaseHead title={title} description={description} />
+    <ViewTransitions />
+    <BaseHead title={title} description={description} image={image} />
   </head>
   <body
     class="mx-auto flex min-h-screen max-w-6xl flex-col px-4 dark:prose-invert dark:bg-neutral-900 sm:px-6 lg:px-8"
   >
+
     <Header />
 
-    <!-- 内容区域，确保其动态调整高度 -->
     <main class="flex-grow">
       <slot />
     </main>
 
     <Footer />
+
+    <script>
+      document.addEventListener('astro:page-load', async () => {
+        const preline: any = await import('preline/dist/preline.js');
+        preline.HSStaticMethods.autoInit();
+      });
+    </script>
   </body>
 </html>
