--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -39,7 +39,8 @@ const postUrl = getRelativeLocaleUrl(currentLocale, `posts/${cleanSlug}`);
 ---
 
 <div
-  class="relative overflow-hidden rounded-xl border bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:border-neutral-600 dark:bg-neutral-900 md:flex md:flex-row" transition:animate="slide"
+  class="relative overflow-hidden rounded-xl border bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:border-neutral-600 dark:bg-neutral-900 md:flex md:flex-row"
+  transition:animate="slide"
 >
   <a href={postUrl} class="block md:flex md:flex-1">
     <div class="md:w-2/3">
@@ -64,7 +65,9 @@ const postUrl = getRelativeLocaleUrl(currentLocale, `posts/${cleanSlug}`);
       >
         {post.data.title}
       </h3>
-      <p class="mt-3 text-white dark:text-white md:text-neutral-900 hidden md:block">
+      <p
+        class="mt-3 hidden text-white dark:text-white md:block md:text-neutral-900"
+      >
         {truncatedDescription}
       </p>
     </div>
