--- a/src/pages/zh/category/[category]/[page].astro
+++ b/src/pages/zh/category/[category]/[page].astro
@@ -7,7 +7,10 @@ import PostCard from "@components/CommonCard.astro";
 import Pagination from "@components/Pagination.astro";
 import { getCategoryMetadata } from "@consts";
 import CategorySchema from "@seo/CategorySchema.astro";
-import { getEnglishCategory, getCategoryByLanguage } from "@utils/categoryMapping";
+import {
+  getEnglishCategory,
+  getCategoryByLanguage,
+} from "@utils/categoryMapping";
 
 export const getStaticPaths = (async () => {
   const allPosts = await getCollection("posts", ({ id }) =>
@@ -67,7 +70,10 @@ if (typeof category !== "string") {
 
 const currentLocale = "zh";
 const localizedCategory = getCategoryByLanguage(category, "en", currentLocale);
-const { title, description } = getCategoryMetadata(localizedCategory, currentLocale);
+const { title, description } = getCategoryMetadata(
+  localizedCategory,
+  currentLocale,
+);
 ---
 
 <BaseLayout title={title} description={description}>
@@ -83,16 +89,12 @@ const { title, description } = getCategoryMetadata(localizedCategory, currentLoc
     <Pagination
       currentPage={page.currentPage}
       lastPage={page.lastPage}
-      urlPrev={
-        page.currentPage > 1
-          ? `/zh/category/${category}/${page.currentPage - 1}`
-          : null
-      }
-      urlNext={
-        page.currentPage < page.lastPage
-          ? `/zh/category/${category}/${page.currentPage + 1}`
-          : null
-      }
+      urlPrev={page.currentPage > 1
+        ? `/zh/category/${category}/${page.currentPage - 1}`
+        : null}
+      urlNext={page.currentPage < page.lastPage
+        ? `/zh/category/${category}/${page.currentPage + 1}`
+        : null}
       basePath={`/zh/category/${category}`}
       maxDisplayedPages={5}
     />
