--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -43,85 +43,27 @@ const tabs = [
 
 <BaseLayout title={title} description={description}>
   <h1 class="sr-only">关于{constants.SITE_TITLE}</h1>
-  <div class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
-    <div class="relative p-6 md:p-16">
-      <div
-        class="relative z-10 lg:grid lg:grid-cols-12 lg:items-center lg:gap-16"
-      >
-        <div class="mb-10 lg:order-2 lg:col-span-6 lg:col-start-8 lg:mb-0">
-          <h2
-            class="text-2xl font-bold text-neutral-800 dark:text-neutral-200 sm:text-3xl"
-          >
-            {title}
-          </h2>
-
-          <nav
-            class="mt-5 grid gap-4 md:mt-10"
-            aria-label="Tabs"
-            role="tablist"
-            aria-orientation="vertical"
-          >
-            {
-              tabs.map((tab, index) => (
-                <button
-                  type="button"
-                  class={`rounded-xl p-4 text-start hover:bg-neutral-200 focus:bg-neutral-200 focus:outline-none hs-tab-active:bg-white hs-tab-active:shadow-md hs-tab-active:hover:border-transparent dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:hs-tab-active:bg-neutral-700 md:p-5 ${index === 0 ? "active" : ""}`}
-                  id={`tabs-with-card-item-${index + 1}`}
-                  data-hs-tab={`#tabs-with-card-${index + 1}`}
-                  aria-controls={`tabs-with-card-${index + 1}`}
-                  role="tab"
-                >
-                  <span class="flex gap-x-6">
-                    <Icon
-                      name={tab.icon}
-                      class="mt-2 size-6 shrink-0 text-neutral-800 hs-tab-active:text-neutral-600 dark:text-neutral-200 dark:hs-tab-active:text-neutral-500 md:size-7"
-                    />
-                    <span class="grow">
-                      <span class="block text-lg font-semibold text-neutral-800 hs-tab-active:text-neutral-600 dark:text-neutral-200 dark:hs-tab-active:text-neutral-500">
-                        {tab.title}
-                      </span>
-                      <span class="mt-1 block text-neutral-800 dark:text-neutral-200 dark:hs-tab-active:text-neutral-200">
-                        {tab.content}
-                      </span>
-                    </span>
-                  </span>
-                </button>
-              ))
-            }
-          </nav>
-        </div>
-
-        <div class="lg:col-span-6">
-          <div class="relative">
-            <div>
-              {
-                tabs.map((tab, index) => (
-                  <div
-                    id={`tabs-with-card-${index + 1}`}
-                    class={index === 0 ? "" : "hidden"}
-                    role="tabpanel"
-                    aria-labelledby={`tabs-with-card-item-${index + 1}`}
-                  >
-                    <OptimizedCover
-                      class="rounded-xl shadow-xl shadow-neutral-200 dark:shadow-neutral-900/20"
-                      src={tab.image}
-                      alt={tab.imageAlt}
-                    />
-                  </div>
-                ))
-              }
+  <div
+    class="grid rounded-lg bg-neutral-100 p-5 text-gray-600 dark:bg-neutral-800 lg:p-10"
+  >
+    {
+      tabs.map((tab, i) => (
+        <div class="lg:flex">
+          <div class="flex-1 overflow-hidden rounded-xl p-2 sm:p-1">
+            <img class="rounded-xl" src={tab.image} />
+          </div>
+          <div class="mb-5 flex-1 rounded-lg bg-white p-5 sm:px-2 lg:ml-5 lg:px-6">
+            <div class="flex items-center justify-center">
+              <Icon name={tab.icon} class="size-8 text-gray-600" />
+              <span class="text-md flex-1 px-1 font-bold text-gray-600">
+                {tab.title}
+              </span>
             </div>
+            <div class="mt-4">{tab.content}</div>
           </div>
         </div>
-      </div>
-
-      <div class="absolute inset-0 grid size-full grid-cols-12">
-        <div
-          class="col-span-full h-5/6 w-full rounded-xl bg-neutral-100 dark:bg-neutral-800 sm:h-3/4 lg:col-span-7 lg:col-start-6 lg:h-full"
-        >
-        </div>
-      </div>
-    </div>
+      ))
+    }
   </div>
   <h2 class="sr-only">最新文章</h2>
   <LatestPosts currentLocale={currentLocale} />
