add grace of repentance post

--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -33,7 +33,7 @@ const tabs = [
     icon: "tabler:fish-christianity",
     title: "信仰",
     content:
-      "我信上帝，全能的父，创造天地的主。我信我主耶稣基督，上帝的独生子；因圣灵感孕，由童贞女马利亚所生；在本丢·彼拉多手下受难，被钉于十字架，受死，埋葬，降在阴间；第三天从死里复活；他升天，坐在全能父上帝的右边；将来必从那里降临，审判活人死人。我信圣灵；我信圣而公之教会；我信圣徒相通；我信罪得赦免；我信身体复活；我信永生。阿们。",
+      "我信上帝，全能的父，创造天地的主。我信我主耶稣基督，上帝的独生子；因圣灵感孕，由童贞女马利亚所生；在本丢·彼拉多手下受难，被钉于十字架，受死，埋葬，降在阴间；第三天从死里复活；升天，坐在全能父上帝的右边；将来必从那里降临，审判活人死人。我信圣灵；我信圣而公之教会；我信圣徒相通；我信罪得赦免；我信身体复活；我信永生。阿们。",
     image:
       "https://plus.unsplash.com/premium_photo-1661928975475-57502a6e34a5?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZmFpdGh8ZW58MHx8MHx8fDA%3D",
     imageAlt: "关于 信仰",
