set header nav sticky to top; set header nav color

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,9 @@ const safeGetRelativeLocaleUrl = (path: string) =>
   getRelativeLocaleUrl(currentLocale, path);
 ---
 
-<header class="z-50 flex w-full flex-wrap py-7 lg:flex-nowrap lg:justify-start">
+<header
+  class="sticky top-0 z-50 flex w-full flex-wrap bg-white py-7 dark:bg-neutral-900 lg:flex-nowrap lg:justify-start"
+>
   <nav
     class="relative mx-auto flex w-full max-w-7xl basis-full flex-wrap items-center px-4 lg:grid lg:grid-cols-12 lg:px-8"
     aria-label="Global"
